--- a/becagis-sdk/create_map_with_marker.html
+++ b/becagis-sdk/create_map_with_marker.html
@@ -17,8 +17,8 @@
 <body>
     <style>
         #map {
-            height: 800px;
-            width: 800px;
+            height: 500px;
+            width: 100%;
         }
     </style>
     <!--[if lt IE 7]>
