--- a/becagis-sdk/create_map_with_marker.html
+++ b/becagis-sdk/create_map_with_marker.html
@@ -57,7 +57,8 @@
                             },
                             options: {
                                 showPopup: {
-                                    content: "BecaGIS Team"
+                                    content: "BecaGIS Team",
+                                    latlng: [11.05468402738991, 106.66458020843481]
                                 }
                             }
                         }
